# snake

./: README.md  snake.cabal  stack.yaml
.github/workflows/: ci.yaml
src/: Main.hs  Snake.hs  UI.hs
