name:                snake
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SamTay/snake#readme
license:             BSD3
license-file:        LICENSE
author:              Sam Tay
maintainer:          sam.chong.tay@gmail.com
copyright:           2017 Sam Tay
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable snake
  hs-source-dirs:      src
  other-modules:       Snake
                     , UI
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base         >= 4.7 && < 5
                     , brick        >= 0.17.2 && < 0.18
                     , containers   >= 0.5.7.1 && < 0.5.8
                     , linear       >= 1.20.6 && < 1.21
                     , microlens    >= 0.4.8.0 && < 0.4.9
                     , microlens-th >= 0.4.1.1 && < 0.4.2
                     , random       >= 1.1 && < 2
                     , vty          >= 5.15.1 && < 5.16
