name:                snake
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SamTay/snake#readme
license:             BSD3
license-file:        LICENSE
author:              Sam Tay
maintainer:          sam.chong.tay@gmail.com
copyright:           2017 Sam Tay
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable snake
  hs-source-dirs:      src
  other-modules:       Snake
                     , UI
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base                 >= 4.7 && < 5,
                       brick                >= 0.57.1 && < 0.58,
                       containers           >= 0.6.2 && < 0.7,
                       transformers         >= 0.5.6 && < 0.6,
                       random               >= 1.2.0 && < 1.3,
                       vty                  >= 5.32 && < 5.33,
                       extra                >= 1.7.8 && < 1.8,
                       lens                 >= 4.19.2 && < 4.20,
                       linear               >= 1.21.3 && < 1.22
